--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
         <a href="/quote">quote</a>
         <a href="/contacts">contact</a>
     </nav>
-    <h1>Заменено содержимым base.html</h1>
 
-{% block content %} {% endblock %}
+    <h1>ЗАРАБОТАЛО!!!</h1>
+{% block content %}<h1>Заменено содержимым base.html</h1> {% endblock %}
 </body>
 </html>
